--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    
+
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
@@ -27,6 +27,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -56,6 +58,9 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="shift.html">Shift</a></li>
+	    <li><a href="frequency.html">Frequency</a></li>
+	    <li><a href="convert.html">Convert</a></li>
+      	    <li><a href="pattern.html">Pattern</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -64,8 +69,17 @@
     <div class="container">
 
       <div class="home">
-        <h1>Collection of helpful CTF tools.</h1>
-	<h2>Save time, score points.</h2>
+        <h1>JavaScript CTF Tools</h1>
+	<h2>Save Time, Score Points</h2>
+	<br/>
+	<h3>Instructions:</h3>
+	<div class="ins" style="margin-left: auto;margin-right: auto;display: table;">
+	<ul style="text-align:left;font-size: 20px;">
+		<li>Fork <a href="https://github.com/gregdhill/tools"><i class="fa fa-github" aria-hidden="true" style="color:white;"></i></a>.</li>
+		<li>Change gh-pages source branch.</li>
+		<li>Access at 'username.github.io'.</li>
+	</ul>
+	</div>
       </div>
 
     </div><!-- /.container -->
@@ -79,7 +93,6 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
-    
+
   </body>
 </html>
-
