--- a/pattern.html
+++ b/pattern.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    
+
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
@@ -17,7 +17,7 @@
     <meta name="msapplication-config" content="img/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Shift Cipher</title>
+    <title>Pattern</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -55,10 +55,10 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="shift.html">Shift</a></li>
+            <li><a href="shift.html">Shift</a></li>
 	    <li><a href="frequency.html">Frequency</a></li>
 	    <li><a href="convert.html">Convert</a></li>
-	    <li><a href="pattern.html">Pattern</a></li>
+	    <li class="active"><a href="pattern.html">Pattern</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -66,23 +66,8 @@
 
     <div class="container">
 
-      <div class="home">
-        <h1>Shift Cipher</h1>
-        <div class="row">
-	    <input type="text" class="form-control" id="cipher_text"></input>
-	</div>	
-	<div class="row" style="padding-top: 10px; padding-bottom: 20px;">
-	    <button type="button" class="btn btn-primary btn-lg btn-block" onclick="decrypt()">
-  		<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Run
-	    </button>
-	</div>
-
-	<div id="output">
-	
-	</div>
-
-      </div>
-
+    <div class="home">
+        <h1>Under Construction</h1>
     </div><!-- /.container -->
 
 
@@ -94,42 +79,10 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
-    
+
 	<script type="text/javascript">
-	function decrypt() {
 
-		document.getElementById("output").innerHTML = "";
-
-		var str = "<table class='table'><thead><tr><th style='text-align: center;'>Rotation</th><th style='text-align: center;'>Text</th></tr></thead><tbody>"; 
-		var a = ["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s","t","u","v","w", "x","y","z"];
-		var p = "";
-		var c = document.getElementById("cipher_text").value;
-		var len = c.length;
-
-		if (len == 0) {
-			return;
-		}
-	
-		var shift = 0
-		while (shift <= 26) {
-			for (var i = 0; i < len; i++) {
-				if (a.includes(c.charAt(i))) {
-					p += a[(a.indexOf(c.charAt(i)) + shift)%(a.length)]
-				}
-				else {
-					p += c.charAt(i);
-				}
-			}
-
-			str += "<tr><td>" + shift + "</td><td width='1000' style='text-align: start;'>" + p + "</td></tr>";	
-			shift = shift + 1;
-			p = "";
-		}
-		str += "</tbody></table>";
-		document.getElementById("output").innerHTML = str;
-	}
 	</script>
 
   </body>
 </html>
-
