--- a/shift.html
+++ b/shift.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
     
@@ -21,22 +20,10 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -50,17 +37,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="">CTF Tools</a>
+          <a class="navbar-brand" href="index.html">CTF Tools</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="shift.html">Shift</a></li>
-	    <li><a href="frequency.html">Frequency</a></li>
 	    <li><a href="convert.html">Convert</a></li>
-	    <li><a href="pattern.html">Pattern</a></li>
+	    <li><a href="frequency.html">Frequency</a></li>
+            <li class="active"><a href="shift.html">Shift</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </nav>
 
@@ -68,12 +53,12 @@
 
       <div class="home">
         <h1>Shift Cipher</h1>
-        <div class="row">
+        <div class="row left">
 	    <input type="text" class="form-control" id="cipher_text"></input>
 	</div>	
-	<div class="row" style="padding-top: 10px; padding-bottom: 20px;">
+	<div class="row right">
 	    <button type="button" class="btn btn-primary btn-lg btn-block" onclick="decrypt()">
-  		<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Run
+  		<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
 	    </button>
 	</div>
 
@@ -83,16 +68,9 @@
 
       </div>
 
-    </div><!-- /.container -->
+    </div>
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
     
 	<script type="text/javascript">
@@ -100,8 +78,10 @@
 
 		document.getElementById("output").innerHTML = "";
 
-		var str = "<table class='table'><thead><tr><th style='text-align: center;'>Rotation</th><th style='text-align: center;'>Text</th></tr></thead><tbody>"; 
-		var a = ["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s","t","u","v","w", "x","y","z"];
+		var str = "<table class='table'><thead><tr><th style='text-align: center;'>Rotation</th><th style='text-align: left;'>Text</th></tr></thead><tbody>"; 
+		var a = ["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s","t","u","v","w","x","y","z"];
+		a.push("A","B","C","D","E","F","G","H","I","J","K","L","M","N","O","P","Q","R","S","T","U","V","W","X","Y","Z");
+		a.push("1","2","3","4","5","6","7","8","9","0");
 		var p = "";
 		var c = document.getElementById("cipher_text").value;
 		var len = c.length;
