--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-    <script src="js/ie-emulation-modes-warning.js"></script>
+	<script defer src="js/fontawesome-all.js"></script>
   </head>
 
   <body>
@@ -50,27 +48,27 @@
       </div>
     </nav>
 
-    <div class="container">
+	<div class="container">
 
-      <div class="home">
-	<h1>Capture The Flag (CTF)</h1>
-        <h2>JavaScript Tools</h2>
-	<h2>Save Time, Score Points</h2>
-	<br/>
-	<h3>Instructions:</h3>
-	<div class="ins" style="margin-left: auto;margin-right: auto;display: table;">
-	<ul style="text-align:left;font-size: 20px;">
-		<li>Fork <a href="https://github.com/gregdhill/tools"><i class="fa fa-github" aria-hidden="true" style="color:white;"></i></a>.</li>
-		<li>Change gh-pages source branch.</li>
-		<li>Access at 'username.github.io'.</li>
-	</ul>
+		<div class="home">
+			<h1>Capture The Flag (CTF)</h1>
+			<h2>JavaScript Tools</h2>
+			<h2>Save Time, Score Points</h2>
+			<br/>
+			<h3>Instructions:</h3>
+			<div class="ins" style="margin-left: auto;margin-right: auto;display: table;">
+				<ul style="text-align:left;font-size: 20px;">
+				<li>Fork <a href="https://github.com/gregdhill/tools"><i class="fab fa-github" aria-hidden="true" style="color:white;"></i></a>,</li>
+				<li>Change gh-pages source branch,</li>
+				<li>Access locally or at 'username.github.io'.</li>
+				</ul>
+			</div>
+		</div>
+
 	</div>
-      </div>
 
-    </div>
-
+	<script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
 
   </body>
 </html>
