--- a/shift.html
+++ b/shift.html
@@ -16,14 +16,13 @@
     <meta name="msapplication-config" content="img/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Shift Cipher</title>
+    <title>Shift</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/ie-emulation-modes-warning.js"></script>
+	<script defer src="js/fontawesome-all.js"></script>
   </head>
 
   <body>
@@ -51,37 +50,44 @@
 
     <div class="container">
 
-      <div class="home">
-        <h1>Shift Cipher</h1>
-        <div class="row left">
-	    <input type="text" class="form-control" id="cipher_text"></input>
-	</div>	
-	<div class="row right">
-	    <button type="button" class="btn btn-primary btn-lg btn-block" onclick="decrypt()">
-  		<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-	    </button>
-	</div>
-
-	<div id="output">
-	
-	</div>
-
-      </div>
+		<div class="home">
+			<h1>Shift</h1>
+			<div class="description">
+				<p>Brute-force rotation of the given ciphertext using a Caesar shift.</p>
+			</div>
+			<div class="row options">
+				<label class="checkbox-inline"><input type="checkbox" id="lower" value="" checked>Lowercase</label>
+				<label class="checkbox-inline"><input type="checkbox" id="upper" value="">Uppercase</label>
+				<label class="checkbox-inline"><input type="checkbox" id="numbs" value="">Numbers</label> 
+			</div>	
+			<div class="row left">
+				<input type="text" class="form-control text-box" id="cipher_text"></input>
+			</div>	
+			<div class="row right">
+				<button type="button" class="btn btn-primary btn-lg btn-block" onclick="decrypt()">
+					<span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+				</button>
+			</div>
+			<div id="output"></div>
+		</div>
 
     </div>
 
+	<script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-    
 	<script type="text/javascript">
 	function decrypt() {
 
 		document.getElementById("output").innerHTML = "";
 
-		var str = "<table class='table'><thead><tr><th style='text-align: center;'>Rotation</th><th style='text-align: left;'>Text</th></tr></thead><tbody>"; 
-		var a = ["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s","t","u","v","w","x","y","z"];
-		a.push("A","B","C","D","E","F","G","H","I","J","K","L","M","N","O","P","Q","R","S","T","U","V","W","X","Y","Z");
-		a.push("1","2","3","4","5","6","7","8","9","0");
+		var str = "<table class='table'><thead><tr><th style='text-align: center;'>Rotation</th><th style='text-align: left;'>Text</th></tr></thead><tbody>";
+		var a = [];
+		if (document.getElementById("lower").checked == true)
+			a.push("a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s","t","u","v","w","x","y","z");
+		if (document.getElementById("upper").checked == true)
+			a.push("A","B","C","D","E","F","G","H","I","J","K","L","M","N","O","P","Q","R","S","T","U","V","W","X","Y","Z");
+		if (document.getElementById("numbs").checked == true)
+			a.push("1","2","3","4","5","6","7","8","9","0");
 		var p = "";
 		var c = document.getElementById("cipher_text").value;
 		var len = c.length;
@@ -101,7 +107,7 @@
 				}
 			}
 
-			str += "<tr><td>" + shift + "</td><td width='1000' style='text-align: start;'>" + p + "</td></tr>";	
+			str += "<tr><td width='500'>" + shift + "</td><td width='1000' style='text-align: start;'>" + p + "</td></tr>";	
 			shift = shift + 1;
 			p = "";
 		}
